keylime-macros/tests/define_view_trait/error_missing_transform_fn.stderr
error: expected `,`
  --> tests/define_view_trait/error_missing_transform_fn.rs:27:37
   |
27 |     #[transform(error = ParsingError)] // missing transforming fn
   |                                     ^
